--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-<H3></H3>
-<p></p>
-<p></p>
-<p></p>
+    <p>Hello!   My name is Bill Kiechle. </p>
+
+    <p>I have worked in the geospatial sciences over 20 years, for organizations in multiple industries (Environmental, Public Utilities, Military, and Healthcare) across the country (Wisconsin, Minnesota, Alaska, Massachusetts, and South Carolina).  Recent changes in the industry have moved map production from paper maps to services that allow the user to define and create documents and graphics directly from internet based sources.</p>  
     
+    <p>I am a fan of science fiction, wargames (tabletop and computer), and scale modeling.  I am a home cook and baker and enjoy modifying, updating, and recreating recipes for friends and family.</p>
+    
+    <p>Currently, I am a GIS Manager with Palmetto GBA of Columbia, South Carolina.  My wife and I live in East Kingston, NH with my father-in-law and our dogs Metronome and Biscuit.</p>
 </body>
 </html>
