--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
+
 <body>
+<h1>Bill Kiechle</h1>
+
     <p>Hello!   My name is Bill Kiechle. </p>
 
     <p>I have worked in the geospatial sciences over 20 years, for organizations in multiple industries (Environmental, Public Utilities, Military, and Healthcare) across the country (Wisconsin, Minnesota, Alaska, Massachusetts, and South Carolina).  Recent changes in the industry have moved map production from paper maps to services that allow the user to define and create documents and graphics directly from internet based sources.</p>  
