--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
 </head>
 <body>
-    
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">          
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+    <form>
+        <div class="form-group">
+            <label for="visitorName">Name</label>
+            <input type="visitorName" class="form-control" id="visitorName" aria-describedby="emailHelp" placeholder="Please enter your name">
+            <small id="emailHelp" class="form-text text-muted">We love to know who visits and if we have helped you.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Message</label>
+          <input type="message" class="form-control" id="visitorMessage" placeholder="Please leave a message">
+          <small id="emailHelp" class="form-text text-muted">Please leave a message about your concern and I will get back to you.</small>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>  
 </body>
 </html>
