--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 <body>
 <h1>Bill Kiechle</h1>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">          
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <p>Hello!   My name is Bill Kiechle. </p>
 
     <p>I have worked in the geospatial sciences over 20 years, for organizations in multiple industries (Environmental, Public Utilities, Military, and Healthcare) across the country (Wisconsin, Minnesota, Alaska, Massachusetts, and South Carolina).  Recent changes in the industry have moved map production from paper maps to services that allow the user to define and create documents and graphics directly from internet based sources.</p>  
