--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h3>Bill Kiechle</h3>
+  <h3 class="offset-1 col-md-3">Bill Kiechle</h3>
 
-    <h4>Portfolio</h4>
+   
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -32,23 +32,23 @@
             </div>
           </nav>
 
-
+          <h4>Portfolio</h4>
           
     <div class = "row">
         <div class="offset-2 col-sm-4">
-              <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate orci elit, ac facilisis lacus mattis quis. Integer fringilla consectetur diam. Fusce in accumsan tortor. Nullam ac lacinia nisi, at scelerisque justo. Vestibulum vel tincidunt orci, nec varius lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vehicula commodo nulla non bibendum. Fusce purus lacus, sollicitudin nec fermentum eu, pretium vitae ligula. Phasellus volutpat augue a ipsum venenatis, a tincidunt turpis luctus. Fusce feugiat ex vitae magna ullamcorper, eget maximus neque cursus.</p>
+              <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
         </div>
         <div class="col-sm-4 offset-2 ">
-                <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate orci elit, ac facilisis lacus mattis quis. Integer fringilla consectetur diam. Fusce in accumsan tortor. Nullam ac lacinia nisi, at scelerisque justo. Vestibulum vel tincidunt orci, nec varius lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vehicula commodo nulla non bibendum. Fusce purus lacus, sollicitudin nec fermentum eu, pretium vitae ligula. Phasellus volutpat augue a ipsum venenatis, a tincidunt turpis luctus. Fusce feugiat ex vitae magna ullamcorper, eget maximus neque cursus.</p>
+          <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
         </div>
     </div>
 
     <div class = "row">
             <div class="offset-2 col-sm-4">
-                  <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate orci elit, ac facilisis lacus mattis quis. Integer fringilla consectetur diam. Fusce in accumsan tortor. Nullam ac lacinia nisi, at scelerisque justo. Vestibulum vel tincidunt orci, nec varius lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vehicula commodo nulla non bibendum. Fusce purus lacus, sollicitudin nec fermentum eu, pretium vitae ligula. Phasellus volutpat augue a ipsum venenatis, a tincidunt turpis luctus. Fusce feugiat ex vitae magna ullamcorper, eget maximus neque cursus.</p>
+              <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
             </div>
             <div class="col-sm-4 offset-2 ">
-                    <p>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vulputate orci elit, ac facilisis lacus mattis quis. Integer fringilla consectetur diam. Fusce in accumsan tortor. Nullam ac lacinia nisi, at scelerisque justo. Vestibulum vel tincidunt orci, nec varius lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vehicula commodo nulla non bibendum. Fusce purus lacus, sollicitudin nec fermentum eu, pretium vitae ligula. Phasellus volutpat augue a ipsum venenatis, a tincidunt turpis luctus. Fusce feugiat ex vitae magna ullamcorper, eget maximus neque cursus.</p>
+              <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
             </div>
         </div>
 
