--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,10 @@
 
 </head>
 <body>
+<row>
+    <h3 class="offset-1 col-md-3">Bill Kiechle</h3>
+
+   
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">          
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,6 +31,11 @@
                   </ul>
                 </div>
               </nav>
+
+            </row>
+
+    <h4>Contact</h4>
+
     <form>
         <div class="form-group">
             <label for="visitorName">Name</label>
