--- a/contact.html
+++ b/contact.html
@@ -20,22 +20,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="./index.html">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Portfolio</a>
+                      <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
                     </li>
                   </ul>
                 </div>
               </nav>
 
             </row>
-
-    <h4>Contact</h4>
-
+<row>
+    <h4 class="offset-1 col-md-2">Contact</h4>
+</row>
     <form>
         <div class="form-group">
             <label for="visitorName">Name</label>
@@ -55,5 +55,9 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>  
+
+      <div class="footer">
+        <p>Footer Text</p>
+      </div>
 </body>
 </html>
