--- a/portfolio.html
+++ b/portfolio.html
@@ -12,47 +12,50 @@
     <title>Portfolio</title>
 </head>
 <body>
+  <row>
+
   <h3 class="offset-1 col-md-3">Bill Kiechle</h3>
-
-   
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
               </ul>
             </div>
           </nav>
-
-          <h4>Portfolio</h4>
+  </row>
+  <row>
+      <h4 class="offset-1 col-md-2">Portfolio</h4>
+  </row>
           
     <div class = "row">
-        <div class="offset-2 col-sm-4">
+        <div class="offset-1 col-sm-3">
               <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
         </div>
-        <div class="col-sm-4 offset-2 ">
+        <div class="col-sm-3 offset-1 ">
           <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
         </div>
     </div>
 
     <div class = "row">
-            <div class="offset-2 col-sm-4">
+            <div class="offset-1 col-sm-3">
               <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
             </div>
-            <div class="col-sm-4 offset-2 ">
+            <div class="col-sm-3 offset-1 ">
               <img class="portfolioImages" src="./assets/images/Kaktovik2.jpg" >
             </div>
         </div>
 
 
-        <footer></footer>
+        <div class="footer">
+          <p>Footer Text</p>
+        </div>
       </body>
 </html>
