--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="./index.html">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <h4>Index</h4>
+      <row>
+          <h4 class="offset-1 col-md-2">Index</h4>
+      </row>
 
 
     <img id="headshot" src="./assets/images/Kaktovik2006.png">
@@ -45,5 +47,9 @@
     <p>I am a fan of science fiction, wargames (tabletop and computer), and scale modeling.  I am a home cook and baker and enjoy modifying, updating, and recreating recipes for friends and family.</p>
     
     <p>Currently, I am a GIS Manager with Palmetto GBA of Columbia, South Carolina.  My wife and I live in East Kingston, NH with my father-in-law and our dogs Metronome and Biscuit.</p>
-</body>
+    <div class="footer">
+      <p>Footer Text</p>
+    </div>
+
+  </body>
 </html>
